feat(v1.1.0): 도메인 삭제 API, 2D 레이아웃 다국어/선택형 필드 고도화, 암호화 마스킹 보강
## 주요 변경사항

### 스키마 관리 - 도메인 삭제 기능 추가
- DELETE /api/domains/{id} 엔드포인트 추가 (domain:write 권한)
- DomainService: 연관 엔티티 순차 안전 삭제 (TRUNCATE 미사용)
- schema.vue: 도메인 선택 시 [도메인 삭제] 버튼 및 confirm 모달
- SchemaTreeNode: 도메인 노드 삭제 아이콘 활성화

### 2D 레이아웃 다국어(MULTILINGUAL) 필드 고도화
- 단일 행(h=1): 조회 모드 KO/EN 뱃지 + 편집 모드 컴팩트 인풋
- getMultilingualValue: JSON 문자열 및 일반 텍스트 안전 파싱
- setMultilingualValue: 대소문자 키 혼재 시 기존 키 정확 바인딩
- setFieldValue: 대소문자 매칭 기존 키 우선 갱신

### 선택형(SELECT) 필드 다국어 라벨 이상 해결
- getFieldOptions: 다국어 객체 label 로케일 기반 추출 ([object Object] 차단)
- va-select: track-by 충돌 제거, value-by/text-by 단독 사용
- getSelectOptionLabels: 쉼표 문자열, JSON 배열 등 안전 파싱

### 암호화/마스킹 보강
- DataMaskingService: isEncrypted=true 우선순위, 대소문자 방어 로직
- 고객 레코드 소문자 중복 키 23개 정리 완료
- getFieldDefinition: 암호화 필드 정의 우선 반환

### 기타
- 특화도메인 템플릿 확장 (고객/제품/직원/자재/주식/거래처)
- RecordDetailDrawer/RecordFormModal 암호화 복호화 UI
- DQ 룰 엔진 REGEX 안전 파싱, 승인 워크플로우 개선
- Dockerfile_fast 추가 (backend JAR 직접 복사 빌드)
- i18n 다국어 키 추가 (ko/en)
- 버전 1.0.9 → 1.1.0

## 테스트
- DomainControllerTest: 9/9 GREEN
- DataMaskingServiceTest: 6/6 GREEN
- DynamicRecordLayoutRenderer.spec.ts: 6/6 GREEN
- nuxi build: 문법 검증 통과